feat. 1차 리팩토링 완료 (기존 다른 라이브러리에 대한 의존성 제거)
현재 SqlClient와 Oracle Data Access, Newtonsoft.Json 의존 존재

--- a/SECUiDEA.CoreDAL.TestProject/SECUiDEA.CoreDAL.TestProject.csproj
+++ b/SECUiDEA.CoreDAL.TestProject/SECUiDEA.CoreDAL.TestProject.csproj
@@ -17,6 +17,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CoreDAL\SECUiDEA.CoreDAL.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
