--- a/CoreDAL/SECUiDEA.CoreDAL.csproj
+++ b/CoreDAL/SECUiDEA.CoreDAL.csproj
@@ -2,11 +2,35 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Title>$(AssemblyName)</Title>
+    <Version>5.0.0</Version>
+    <Authors>Jay9011</Authors>
+    <Company>SECUiDEA</Company>
+    <Description>DataBase에 접근해서 쿼리(프로시저)를 실행하고 결과를 가져오기 위한 모듈.
+MSSQL, Oracle 등 여러 종류의 DB에 접근할 수 있으며, 동시에 여러개의 DB에 접근할 수 있다.</Description>
+    <Copyright>Jay9011</Copyright>
+    <PackageReadmeFile>ReadMe.md</PackageReadmeFile>
+    <RepositoryUrl>http://192.168.0.39/SECUiDEA.CoreDAL.git</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageReleaseNotes>의존형 패키지를 최소한으로 줄인 독자 Core DAL 레이어로 변형</PackageReleaseNotes>
+    <AssemblyVersion>$(VersionPrefix)</AssemblyVersion>
+    <FileVersion>$(VersionPrefix)</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.3" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
+    <PackageReference Include="Oracle.ManagedDataAccess.Core" Version="2.19.290" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="ReadMe.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
+
+	<Target Name="PushNuGetPackage" AfterTargets="Pack">
+		<Exec Command="dotnet nuget push $(PackageOutputPath)$(AssemblyName).$(Version).nupkg --source Local" />
+	</Target>
 </Project>
